# ChangeLog for app-arch/dpkg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/dpkg/ChangeLog,v 1.328 2015/05/30 09:44:47 jer Exp $

*dpkg-1.18.1 (30 May 2015)

  30 May 2015; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.23.ebuild,
  -dpkg-1.18.0.ebuild, +dpkg-1.18.1.ebuild:
  Version bump.

  27 May 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for arm, wrt bug #546108

*dpkg-1.18.0 (19 May 2015)

  19 May 2015; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.24.ebuild,
  +dpkg-1.18.0.ebuild:
  Version bump.

  28 Apr 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for alpha, wrt bug #546108

  21 Apr 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for PPC64 (bug #546108).

  21 Apr 2015; Pacho Ramos <pacho@gentoo.org> dpkg-1.17.25.ebuild:
  ppc stable wrt bug #546108

  17 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> dpkg-1.17.25.ebuild:
  sparc stable wrt bug #546108

  17 Apr 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for x86, wrt bug #546108

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for ia64, wrt bug #546108

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for amd64, wrt bug #546108

  10 Apr 2015; Jeroen Roovers <jer@gentoo.org> dpkg-1.17.25.ebuild:
  Stable for HPPA (bug #546108).

*dpkg-1.17.25 (10 Apr 2015)

  10 Apr 2015; Jeroen Roovers <jer@gentoo.org> +dpkg-1.17.25.ebuild:
  Version bump (bug #546108).

*dpkg-1.17.24 (04 Mar 2015)

  04 Mar 2015; Jeroen Roovers <jer@gentoo.org> -dpkg-1.17.22.ebuild,
  +dpkg-1.17.24.ebuild:
  Version bump.

  28 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for ia64, wrt bug #539648

  27 Feb 2015; Agostino Sarubbo <ago@gentoo.org> dpkg-1.17.23.ebuild:
  Stable for sparc, wrt bug #539648

  26 Feb 2015; Markus Meier <maekke@gentoo.org> dpkg-1.17.23.ebuild: