@@ -5,14 +5,16 @@ AUX dpkg-1.17.0-gzip-rsyncable.patch 291 SHA256 653215618c3713f0a03efba0d4606e6b
 AUX dpkg-1.17.1-flags.patch 300 SHA256 b0be51022f576bc0867570192ce5871a0da4ca2a66a4e35bafe167d063d84723 SHA512 6dbede2fdde0e28f5e66d77f694a8aabe55b1395ba6a8d26a4808bbe2909cda00946c21a513bbe60b68e76f5669ef08139c72c036f9a16c095e7d702483ed9f4 WHIRLPOOL 66fa84b14d4e26778205c774929c1ef28e3f2ad344af236fecb2a53b1ec409c2a051368febc572f707cc6d18f2b6506d9f662763278b301f0b75fab2dcdaccfa
 DIST dpkg_1.17.25.tar.xz 4407792 SHA256 07019d38ae98fb107c79dbb3690cfadff877f153b8c4970e3a30d2e59aa66baa SHA512 6a4b45c0f59cd11fc104d954ab790dd7e11e650cd6dde303a664023a04bf6fbc49c878eaf00e27dd7f9bf5e79a92b3a5f5923d003942436758a3027364a0b7c7 WHIRLPOOL 6ed2d8a645787a83f431803214cce9b1c7516c4083ffe651deb7c2f8b641b85d3a17271030286155a985dfd0046fbd584d2d750ab8954e8e5af74085d7651bd2
 DIST dpkg_1.18.1.tar.xz 4340240 SHA256 cb26a97ca21c970cbe63a762125fe21f7437663badf6ce686589fe62650399da SHA512 1aa6b3e5300f80382d84c5f74d945863ea4bc4e71774d6798552421f26cd258b9b96cced1f65b8fca4995c96e2fa55dfb340aa7e1bb8a9f35c74a9fef8dcf0ba WHIRLPOOL 368d3c4e5639f46e0eca572dbcd29800ad4b2f6dadec812065abb0ffacd9846aec26d51f6f386770daa284a91ddd55734bdc9e8db4932df8ea3d0056c5da7839
+DIST dpkg_1.18.2.tar.xz 4345224 SHA256 11484f2a73d027d696e720a60380db71978bb5c06cd88fe30c291e069ac457a4 SHA512 cd84ba53a0a8d6f8c9a79d1b3e4c7716249e6dbf8b92635f4691cc31c9896bc156f6ea5a42de419210133497d05c41eb00208b3ec02d44a177015d23873003af WHIRLPOOL 2f4a60e8127c3514ba9ee51723e4057724b8b8a99caea6812d80bca5617cd6f3971a80c219162fd16059e08bd0914d15a39e618fd115bb6dcb8a6b402c64be42
 EBUILD dpkg-1.17.25.ebuild 2484 SHA256 b40daba3bfec8e2b7268477846df486ba2d74c29f61f365ac582a0d2ab03c5c1 SHA512 cae072918a21de30573cf8addc8c5fd6f131b227db55c75b5a51722de02f323f02051d435103ee468f55cc2ee4d58e70d07cd88481a9767fd66ac2f3b43a114a WHIRLPOOL 931115c1ed2e92fadd148462737415038dd11de43f166ac3c4fcae17de613214a764e21730b1888f79f5c0b21556ceab9c30afbcdab7236c0c6bfe4eb08abc04
 EBUILD dpkg-1.18.1.ebuild 2491 SHA256 01f3810e691f1c6139b5e374287de0efc3979e3f90c879a62678d37202147bad SHA512 d45a1cabb69a9e98c9e46877c7ffd4e601e1e5b25bf16d6e05563bf3c200d7b82abbfeb325d557eaf9863ce31acfe621a24dcb7815d9b936eb9fc6e9cd2083a7 WHIRLPOOL 13bdc96fa2daad49524527d7840d95dad7781bc96bf16fdad539a7f68ceb9a0420adeddea42a9702a883e5070efbc93ea71ebb64a352a873fd93e3addbbafad0
-MISC ChangeLog 41592 SHA256 cfb36122ff9f056ea0a39e15ed2f60eaa47466aa81515b980040816b5555ada1 SHA512 c736a68e647b84e58f5004a331988475969f79d35e481eaf87d07fa93034fd7720f45dc18a70cf9fae5f5f96dee38b35ddb6535609095574381638584be47318 WHIRLPOOL 811c4b5bf272316c59dbd1ca276326bd9af11e4b7f5463bb0b6da97ed5393f5cf95665a14bc74755a22493c36ace4c38e49eefacbe1c596b55afd228dedf21b8
+EBUILD dpkg-1.18.2.ebuild 2491 SHA256 67c6041b966dffbd7ea7bdd66b208ead4445c64a1b30d98a68b8171fab107fc7 SHA512 ac4b814d60b96d8cd259c5c31e7e2527f93cf6144e9b739c208f650c06a4473050959991f55f25b67a3e4028041736f42bbdb31c45437d753323baa459b03222 WHIRLPOOL 3d2b7c8d5748f63cfc338ed191d3d871175edb375cd760f7b359efe3aba9ff139ee2bee075cbda348413e348565bbcc12ff35fd506a9a24d484bd4cfc484aed7
+MISC ChangeLog 41705 SHA256 f7f0188c3df33ab1fc331c9ca695b1eecd4ec0cf3b9e5b3ed08df7b754ff80ce SHA512 8e1c6d6fec58f5fda0a2b052ab7854b6251032d68e2f594c638d6d7978b248ae387ac1d178bb9e4d9dd2587386c2ecdadac03d0df81b9847dab03f23ec29d1ca WHIRLPOOL ad4693ad3c953fcb20ace7db867b1bd293a51a12ee37a0beab170b93be9503b780b023fd17568e9579cc4ca72bc030f19e044fb8ea09989880cb087e7f0937b3
 MISC metadata.xml 243 SHA256 43ad915474628453e4f0257b8184ae2628113c0a8519b3a3e038e885c3aec7e3 SHA512 1153fdbd05486ee938a17e51c2f5aade083c05beff04ada67acccf12b4e1bfc04ac662c921452076b81626f0cfc873518b23b69f003d8df8e3d9f3952828da2e WHIRLPOOL f2b1ce108d5c9f22c81fca2079d928cbadb37350f8aeadce236ad273f86892e01346b6b6928eea67af5a3d960ab6b7e42b02c74e97441e9a6bd89cd0c8f340f7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVphpYACgkQVWmRsqeSphNyWgCeJ1LP1im07XZokGazx/L+AgyS
-54IAmgOVUPxwxk+MXoznGDkoAelT1RDb
-=mLQI
+iEYEAREIAAYFAlXC+mYACgkQVWmRsqeSphMrCwCeKEFbUm9a3xQs09tJ383FrkE8
+JHMAn0JJUTPp+2p8MhETP63A0TL1N+Lw
+=cTvu
 -----END PGP SIGNATURE-----
