@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=>=dev-lang/perl-5.6.0:= dev-perl/TimeDate >=sys-libs/ncurses-5.2-r7 bzip2? ( app-arch/bzip2 ) lzma? ( app-arch/xz-utils ) selinux? ( sys-libs/libselinux ) zlib? ( >=sys-libs/zlib-1.1.4 ) app-arch/xz-utils sys-devel/flex virtual/pkgconfig nls? ( app-text/po4a >=sys-devel/gettext-0.18.2 ) test? ( dev-perl/DateTime-Format-DateParse dev-perl/IO-String dev-perl/Test-Pod virtual/perl-Test-Harness ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=Package maintenance system for Debian
+EAPI=5
+HOMEPAGE=http://packages.qa.debian.org/dpkg
+IUSE=+bzip2 +lzma nls selinux test unicode +update-alternatives +zlib
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=>=dev-lang/perl-5.6.0:= dev-perl/TimeDate >=sys-libs/ncurses-5.2-r7 bzip2? ( app-arch/bzip2 ) lzma? ( app-arch/xz-utils ) selinux? ( sys-libs/libselinux ) zlib? ( >=sys-libs/zlib-1.1.4 )
+SLOT=0
+SRC_URI=mirror://debian/pool/main/d/dpkg/dpkg_1.18.2.tar.xz
+_eclasses_=autotools	2264f05fbbbaaf83d34ec81e72b38ffd	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
+_md5_=841705a645b2c3030d159aa9d935b2fc
